--- a/Aula 01/Att 01/index.html
+++ b/Aula 01/Att 01/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="headerbar">
-        <a href="https://github.com/HenryGuidelli/Des-Web-Uniara">REPOSITÓRIO GITHUB</a>
+        <a bla href="https://henryguidelli.com.br/" target="_blank">GITHUB</a>
     </div>
 
     <div class="container">
@@ -22,16 +22,12 @@
                 <h2>PROJETO DE ALGORITMOS</h2>
                 <h2>com implementações em Java e C++</h2>
             </div>
-            <p>Aqui você pode colocar mais conteúdo, descrições, botões ou qualquer outro elemento que quiser ao lado direito da imagem.</p>
-            <p>Aqui você pode colocar mais conteúdo, descrições, botões ou qualquer outro elemento que quiser ao lado direito da imagem.</p>
-            <p>Aqui você pode colocar mais conteúdo, descrições, botões ou qualquer outro elemento que quiser ao lado direito da imagem.</p>
-            <p>Aqui você pode colocar mais conteúdo, descrições, botões ou qualquer outro elemento que quiser ao lado direito da imagem.</p>
-            <p>Aqui você pode colocar mais conteúdo, descrições, botões ou qualquer outro elemento que quiser ao lado direito da imagem.</p>
-            <p>Aqui você pode colocar mais conteúdo, descrições, botões ou qualquer outro elemento que quiser ao lado direito da imagem.</p>
-            <p>Aqui você pode colocar mais conteúdo, descrições, botões ou qualquer outro elemento que quiser ao lado direito da imagem.</p>
-            <p>Aqui você pode colocar mais conteúdo, descrições, botões ou qualquer outro elemento que quiser ao lado direito da imagem.</p>
-            <p>Aqui você pode colocar mais conteúdo, descrições, botões ou qualquer outro elemento que quiser ao lado direito da imagem.</p>
+            <p>Algoritmos e estruturas de dados formam o núcleo da ciência da computação, sendo os componentes básicos de qualquer software. Aprender como programar computadores está intimamente ligado a algoritmos, já que programas são formulações concretas de algoritmos. Aprendê-los é crucial para qualquer pessoa que deseja desenvolver softwares de qualidade. Esta obra apresenta os principais algoritmos e estruturas de dados conhecidos. As técnicas de projeto de algoritmos são ensinadas de formas simples, seguindo o paradigma de orientação a objetos, por meio de refinamentos sucessivos até o nível de uma implementação na linguagem Java, e todo o programa Java tem um programa C++ correspondente nos apêndices. Destaques: – O livro cobre estruturas de dados básicas, contendo listas lineares, pilhas e filas; algoritmos de ordenação e de pesquisa em memórias primária e secundária; algoritmos em grafos e processamento de cadeias de caracteres; técnicas de análise de algoritmos; paradigmas de projeto de algoritmos; e estudo da complexidade computacional de algoritmos. – Ênfase em tipos abstratos de dados, programação modular, programação orientada a objetos encapsulamento e independência de implementação de tipos abstratos de dados com reaproveitamento de código. – Informação sobre o comportamento teórico e prático dos algoritmos, fornecendo uma base de comparação entre os algoritmos.</p>
+            
+            <button onclick="alert('PEDIDO REGISTRADO!')">PEDIR EXEMPLAR</button>
+
         </div>
+
     </div> 
 
 </body>
